[package]
name = "expression2_image_server"
version = "0.1.0"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.0"
image = "0.23.12"
tokio = { version = "0.3.4", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
reqwest = "0.10.9"
clap = "3.0.0-beta.2"
percent-encoding = "2.1.0"
