[package]
name = "expression2_image_server"
version = "0.1.0"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.4.6"
rocket = { git = "https://github.com/SergioBenitez/Rocket" , rev = "1f1f44f336e5a172361fc1860461bb03667b1ed2" }
tokio = { version = "0.3.4", features = ["stream"] }
bytes = "0.6.0"
image = "0.23.12"
serde = { version = "1.0.117", features = ["derive"] }
reqwest = { version = "0.10.9", features = ["stream"] }
clap = "3.0.0-beta.2"
percent-encoding = "2.1.0"
thiserror = "1.0.22"
