[package]
name = "expression2_image_server"
version = "0.2.0"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
bytes = "1.4.0"
image = "0.24.6"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["stream"] }
clap = { version = "4.3.2", features = ["derive"] }
percent-encoding = "2.2.0"
thiserror = "1"
axum = { version = "0.7.0", features = ["macros"] }
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.18"
